test/spec_vectors/simd_splat/ok/module_20.wat
(module (global $g (mut v128) (v128.const f32x4 0.0 0.0 0.0 0.0)) (func (export "as-br-value1") (param i32) (result v128) (block (result v128) (br 0 (i8x16.splat (local.get 0))))) (func (export "as-return-value1") (param i32) (result v128) (return (i16x8.splat (local.get 0)))) (func (export "as-local_set-value1") (param i32) (result v128) (local v128) (local.set 1 (i32x4.splat (local.get 0))) (return (local.get 1))) (func (export "as-global_set-value1") (param f32) (result v128) (global.set $g (f32x4.splat (local.get 0))) (return (global.get $g))) (func (export "as-br-value2") (param i64) (result v128) (block (result v128) (br 0 (i64x2.splat (local.get 0))))) (func (export "as-return-value2") (param i64) (result v128) (return (i64x2.splat (local.get 0)))) (func (export "as-local_set-value2") (param i64) (result v128) (local v128) (local.set 1 (i64x2.splat (local.get 0))) (return (local.get 1))) (func (export "as-global_set-value2") (param f64) (result v128) (global.set $g (f64x2.splat (local.get 0))) (return (global.get $g))))