test/spec_vectors/simd_splat/fail/module_15.wat
(module (func (result v128) i64x2.splat (f64.const 0.0)))